--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ data/
 *.webm
 temp.wav
 temp.mp4
+audio
+demo_video*.mp4
+*backup*/
 
 # Frontend
 frontend/node_modules/
@@ -40,6 +43,7 @@ frontend/build/
 frontend/.pnp
 frontend/.pnp.js
 frontend/coverage/
+frontend/.vite/
 
 # IDE
 .vscode/
